--- a/streamlit_ml_app/requirements.txt
+++ b/streamlit_ml_app/requirements.txt
@@ -1,10 +1,12 @@
 docx==0.2.4
-joblib==1.5.1
-matplotlib==3.10.3
-numpy==2.3.1
-pandas==2.3.0
 pdfplumber==0.11.7
 python_docx==1.2.0
-seaborn==0.13.2
-streamlit==1.46.0
-tensorflow==2.2
+tensorflow
+pandas>=2.0.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
+matplotlib>=3.7.1
+seaborn>=0.12.2
+plotly>=5.15.0
+joblib>=1.3.2
+streamlit
