--- a/streamlit_ml_app/requirements.txt
+++ b/streamlit_ml_app/requirements.txt
@@ -1,3 +1,4 @@
+python<=3.11
 docx==0.2.4
 pdfplumber==0.11.7
 python_docx==1.2.0
@@ -9,4 +10,4 @@ seaborn>=0.12.2
 plotly>=5.15.0
 joblib>=1.3.2
 streamlit
-keras
+tensorflow
